# Day-Quote

./: README.md  cammand.txt  pyproject.toml  setup.py
.pybuild/cpython3_3.8_day-quote/: .pydistutils.cfg
debian/: changelog  control  debhelper-build-stamp  files  python3-day-quote.postinst.debhelper  python3-day-quote.prerm.debhelper  python3-day-quote.substvars  rules
debian/python3-day-quote/DEBIAN/: control  md5sums  postinst  prerm
src/: main.py
