[tool.poetry]
name = "python3-day-quote"
version = "0.1.0"
description = ""
authors = ["Deepak <deepakpatidar.thoughtwin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
great-text = "^0.1.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
